Switch to Javalin :tada:
Also remove News